add event and calendar

--- a/myapp/src/css/style.css
+++ b/myapp/src/css/style.css
@@ -254,7 +254,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #2487ce;
+  color: #2f24ce;
   font-size: 18px;
   line-height: 1;
 }
