Added User Schedule files

--- a/myapp/src/front end/css/style.css
+++ b/myapp/src/front end/css/style.css
@@ -550,3 +550,18 @@ h1, h2, h3, h4, h5, h6 {
 .main-news .mn-list ul li a:hover {
     color: #FF6F61;
 }
+
+/*--------------------------------------------------------------
+# Schedule table
+--------------------------------------------------------------*/
+.thead-primary{
+  background-color: #e6f2fb;
+}
+
+
+
+
+
+/*--------------------------------------------------------------
+# End Schedule table
+--------------------------------------------------------------*/
