expand full page

--- a/myapp/src/App.css
+++ b/myapp/src/App.css
@@ -34,3 +34,13 @@ label {
 .filter {
   width: 10rem;
 }
+
+.body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.main {
+  flex: 1;
+}
